# TNV_C_project_-rubricaCriminali

ProjectC_base/: CMakeLists.txt  listaCriminali.txt  main.c
ProjectC_base/randomGeneration/: randomGeneration.c  randomGeneration.h
ProjectC_base/sort_libraries_define/: sort_libraries_define.c  sort_libraries_define.h
ProjectC_base/userInput/: userInput.c  userInput.h
ProjectC_base/utilities/: utilities.c  utilities.h
progettoFinaleBeastMode/: CMakeLists.txt  main.c
